[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "twitter"
version = "0.0.1"
description = "Workbench module to download tweets from Twitter"
authors = ["Adam Hooper <adam@adamhooper.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
cjwmodule = "~=3.1"
cjwparquet = "~= 2.1"
httpx = ">=0.16.1"
lz4 = "*"
oauthlib = "~=3.1"
pyarrow = "~=2.0"
python = "~=3.8"

[tool.poetry.dev-dependencies]
pytest = "~=6.0"
pytest_httpx = "~= 0.10"
pytest-cov = "~=2.10"
python-dateutil = "~=2.8"

[tool.isort]
# Black compatibility
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = ["cjwmodule", "pyarrow", "pytest"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
skipsdist = True
envlist = py38-{pyflakes,black,isort,pytest}

[flake8]
exclude = venv/*,tox/*,specs/*,build/*
ignore = E123,E128,E266,E402,W503,E731,W601
max-line-length = 88

[testenv]
deps =
  pyflakes: pyflakes>=2.2
  black: black
  isort: isort
commands =
  pyflakes: pyflakes twitter.py tests
  black: black --check twitter.py tests
  isort: isort --check --diff twitter.py tests

[testenv:py38-pytest]
deps =
  pytest~=6.0
  pytest_httpx~=0.10
  pytest-cov~=2.10
  python-dateutil~=2.8
commands =
  pip install -q .
  pytest -s -v --cov=twitter --cov-report=term-missing
"""
